# fdtd

./: .gitignore  CMakeLists.txt  b
src/norl/: fdtd.cpp  kernels.cpp  kernels.hpp  main.cpp  queues.hpp
src/rl/: kernels.cpp  kernels.hpp  main.cpp
